# aligned_tuple

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.cpp
include/: aligned_tuple.hpp
test/: CMakeLists.txt  test.cpp
